// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar el componente correctamente con la imagen personaliado 1`] = `
<DocumentFragment>
  <img
    alt="Product image"
    class="productImg undefined"
    src="url de la imagen"
  />
</DocumentFragment>
`;

exports[`ProductImage Debe mostrar el conponente con la imagenu del producto 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product image"
      class="productImg undefined"
      src="./coffee-mug.png"
    />
  </div>
</DocumentFragment>
`;
